--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   "author": "ihoey <mail@ihoey.com> (https://blog.ihoey.com/)",
   "license": "MIT",
   "dependencies": {
+    "axios": "^0.18.0",
     "koa": "^2.6.1",
     "koa-bodyparser": "^4.2.1",
     "koa-router": "^7.4.0"
